# multithreaded-renderer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeGenerate.bat  CMakeGenerateMakefile.bat  CMakeGenerateVS19.bat  CMakeLists.txt  CMakeSettings.json  debug_renderer.cpp  debug_renderer.h  deferred_renderer.cpp  deferred_renderer.h  editor.cpp  editor.h  main.cpp  obj_id_renderer.cpp  obj_id_renderer.h  obj_model.cpp  obj_model.h  particle_system.cpp  particle_system.h  pbd_test.cpp  pbd_test.h  render_utils.cpp  render_utils.h  renderer.cpp  renderer.h  res_man.cpp  res_man.h  rhi_test.cpp  rigid_body_object.cpp  rigid_body_object.h  scene.cpp  scene.h  shadow_renderer.cpp  shadow_renderer.h  sph.cpp  sph.h  (+21 more)
data/meshes/: single_room_building.mtl
data/textures/: single_room_building.tga  texture_density.tga  white.tga
engine/: CMakeLists.txt  font3d.hpp  gameos.cpp  gameos.hpp  gameos_debugging.cpp  gameos_fileio.cpp  gameos_graphics.cpp  gameos_input.cpp  gameos_sound.cpp  gameosmain.cpp  gos_input.cpp  gos_render.cpp  gos_render.h  gos_render_priv.h
engine/profiler/: profiler.h  tracy_wrapper.cpp
engine/utils/: Image.cpp  adt.h  camera.cpp  camera.h  camera_utils.h  defines.h  file_utils.cpp  frustum.cpp  frustum.h  gl_fbo.cpp  gl_fbo.h  gl_render_constants.cpp  gl_render_constants.h  gl_utils.cpp  gl_utils.h  hashing.cpp  hashing.h  intersection.h  json_writer.h  kernels.cpp  kernels.h  logging.cpp  macros.h  marshingcubes.cpp  marshingcubes.h  math_utils.h  matrix.cpp  matrix.h  memory_system.h  obj_loader.cpp  obj_loader.h  quaternion.cpp  quaternion.h  render_constants.h  sdf.h  shader_builder.cpp  shader_builder.h  simple_quadrature.cpp  simple_quadrature.h  stream.cpp  (+8 more)
pbd/: CMakeLists.txt  pbd.cpp  pbd.h  pbd_collision.cpp  pbd_collision.h  pbd_constraints.cpp  pbd_constraints.h  pbd_particles.cpp  pbd_particles.h  pbd_particles_collision.cpp  pbd_particles_collision.h  pbd_rb_dynamics.cpp  pbd_rb_dynamics.h
platform/: CMakeLists.txt  platform_winbase.cpp
platform/include/: platform_windows.h
rhi/: CMakeLists.txt  rhi.cpp  rhi.h
rhi/opengl/: CMakeLists.txt  opengl_device.cpp  opengl_device.h  opengl_rhi.cpp  opengl_rhi.h
rhi/vulkan/: CMakeLists.txt  vulkan_device.cpp  vulkan_device.h  vulkan_rhi.cpp  vulkan_rhi.h  vulkan_state.cpp  vulkan_state.h
shaders/: coloured_quad.frag  coloured_quad.vert  copy_depth.frag  debug.frag  debug.vert  debug_prims.frag  debug_prims.vert  deferred.frag  deferred.vert  deferred_pbd_particle.frag  deferred_pbd_particle.vert  deferred_sph.frag  deferred_sph.vert  directional_shadow.frag  directional_shadow.vert  lightpass.frag  lightpass.vert  make-SPIR-V.sh  null.frag  null.vert  obj_id.frag  particle.frag  particle.vert  pointlightpass.frag  pointlightpass.vert  sdf_visualize.frag  sdf_visualize.vert  simple.frag  simple.vert  textured_quad.frag  textured_quad.vert  upsample_bilateral.frag  upsample_bilateral.vert
shaders/include/: lighting.hglsl
